# edgedns

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  edgedns.service  edgedns.toml  rustfmt.toml
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
fuzz/: Cargo.toml
fuzz/fuzzers/: dns_normalize.rs  dns_question.rs
src/: cache.rs  client.rs  client_query.rs  config.rs  dns.rs  log_dnstap.rs  main.rs  net_helpers.rs  resolver.rs  tcp_listener.rs  udp_listener.rs  varz.rs  webservice.rs
src/edgedns/: main.rs
src/edgedns-cli/: edgedns-cli.proto  main.rs
src/edgedns/libedgedns/: Cargo.toml  build.rs
src/edgedns/libedgedns/src/: c_abi.rs  cache.rs  cli_listener.rs  client_queries_handler.rs  client_query.rs  config.rs  dns.rs  errors.rs  ext_response.rs  ext_udp_listener.rs  globals.rs  hooks.rs  lib.rs  log_dnstap.rs  net_helpers.rs  pending_query.rs  query_router.rs  resolver.rs  resolver_queries_handler.rs  tcp_acceptor.rs  tcp_arbitrator.rs  udp_acceptor.rs  udp_stream.rs  upstream_probe.rs  upstream_server.rs  varz.rs  webservice.rs
src/libedgedns/: Cargo.toml  rustfmt.toml
src/libedgedns/src/: c_abi.rs  cache.rs  client_queries_handler.rs  client_query.rs  config.rs  dns.rs  ext_response.rs  hooks.rs  lib.rs  log_dnstap.rs  net_helpers.rs  pending_query.rs  resolver.rs  tcp_acceptor.rs  tcp_arbitrator.rs  udp_acceptor.rs  udp_stream.rs  upstream_probe.rs  upstream_server.rs  varz.rs  webservice.rs
tests/: tests.rs
