[package]
name = "edgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]

[features]
webservice = ["libedgedns/webservice"]
nightly = ["libedgedns/nightly", "clap/nightly", "log/nightly"]
clippy = ["libedgedns/clippy"]

default = ["nightly", "webservice"]

[[bin]]
name = "edgedns"
path = "src/edgedns/main.rs"

[dependencies.libedgedns]
path = "src/edgedns/libedgedns"

[dependencies]
clap = "*"
env_logger = "*"
log = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
