[package]
name = "edgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]

[features]
webservice = ["libedgedns/webservice"]
nightly = ["libedgedns/nightly", "clap/nightly", "log/nightly"]
clippy = ["libedgedns/clippy"]

default = ["nightly", "webservice"]

[[bin]]
name = "edgedns"
path = "src/edgedns/main.rs"

#[[bin]]
#name = "edgedns-cli"
#path = "src/edgedns-cli/main.rs"

[dependencies.libedgedns]
path = "src/edgedns/libedgedns"

[dependencies]
bytes = "*"
clap = "*"
env_logger = "*"
futures = "*"
log = "*"
prost = "*"
prost-derive = "*"
prost-types = "*"
tokio-core = "*"
tokio-io = "*"
tokio-uds = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
