[package]
name = "edgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]

[features]
webservice = ["libedgedns/webservice"]
clippy = ["libedgedns/clippy"]

default = ["webservice"]

[dev-dependencies]
nix = "*"
regex = "*"
tempfile = "*"

[dependencies.libedgedns]
path = "src/libedgedns"

[dependencies]
clap = "*"
env_logger = "0.11"
log = "0.4"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
