[package]
name = "libedgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false

[features]
webservice = ["hyper"]
nightly = ["hyper/nightly", "log/nightly", "prometheus/nightly"]

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "*"
coarsetime = "0.1.10"
dnstap = "*"
env_logger = "*"
futures = "*"
hyper = {version = "0.11", optional = true, default-features = false}
jumphash = "*"
lazy_static = "*"
log = "*"
net2 = "*"
nix = "~0.8 "
parking_lot = "*"
privdrop = "*"
prometheus = {git = "https://github.com/pingcap/rust-prometheus", default-features = false}
rand = "0.5"
siphasher = "*"
slab = "*"
socket-priority = "*"
tokio-core = "*"
tokio-io = "*"
tokio-timer = "0.1"
toml = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
