[package]
name = "libedgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false

[features]
webservice = ["hyper"]

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "0.1.12"
coarsetime = "0.1.10"
dnstap = "*"
env_logger = "0.11"
futures = "*"
hyper = {version = "0.11", optional = true, default-features = false}
jumphash = "*"
lazy_static = "*"
log = "0.4"
net2 = "*"
nix = "~0.8 "
parking_lot = "*"
privdrop = "*"
prometheus = "*"
rand = "0.5"
siphasher = "*"
slab = "*"
socket-priority = "*"
tokio-core = "*"
tokio-io = "*"
tokio-timer = "0.1"
toml = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
