[package]
name = "libedgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false

[features]
webservice = ["hyper"]
nightly = ["hyper/nightly", "log/nightly", "prometheus/nightly", "coarsetime/nightly"]

[[bin]]
name = "edgedns"
path = "src/edgedns/main.rs"

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "*"
coarsetime = "*"
dnstap = "*"
dnssector = {git = "https://github.com/jedisct1/dnssector"}
env_logger = "*"
futures = "*"
glob = "*"
hyper = {version = "*", optional = true, default-features = false}
jumphash = "*"
lazy_static = "*"
libc = "*"
libloading = "*"
log = "*"
net2 = "*"
nix = "~0.8 "
parking_lot = "*"
privdrop = "*"
prometheus = {git = "https://github.com/pingcap/rust-prometheus", default-features = false}
prost = "*"
prost-derive = "*"
prost-types = "*"
qp-trie = "*"
rand = "*"
siphasher = "*"
slab = "*"
socket-priority = "*"
tokio-core = "*"
tokio-io = "*"
tokio-timer = "*"
tokio-uds = "*"
toml = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
